Changes - adding totales in dashboardController
